--- a/assets/mediaqueries.css
+++ b/assets/mediaqueries.css
@@ -93,6 +93,34 @@
   .personel .resources ul li small {
     display: none;
   }
+
+  .services-array {
+
+  }
+
+  .services-array li {
+    width: 100%;
+    float: none;
+    border: 0;
+    height: auto;
+  }
+
+  .services-array .v-keyline {
+    display: none;
+  }
+
+  .services-array li .graphic {
+    display: none;
+  }
+
+  .services-array li h3 {
+    text-align: left;
+  }
+
+  .services-array li p {
+    text-align: left;
+    padding: 0;
+  }
 }
 
 @media (max-width: 419px) {
