--- a/assets/mediaqueries.css
+++ b/assets/mediaqueries.css
@@ -192,7 +192,7 @@
     font-size: 24px;
   }
 
-  .personel .resources ul {
+  .personel .resources, .personel .resources ul {
     width: 100%;
   }
 
