--- a/wp-content/themes/sparkling/css/mediaqueries.css
+++ b/wp-content/themes/sparkling/css/mediaqueries.css
@@ -34,9 +34,9 @@
     font-size: 16px;
   }*/
 
-  .section-home {
+  /*.section-home {
     margin-top: 50px;
-  }
+  }*/
 
   .section-home h1 {
     font-size: 50px;
