--- a/wp-content/themes/sparkling/css/style.css
+++ b/wp-content/themes/sparkling/css/style.css
@@ -94,23 +94,26 @@ a img {
   margin: 0 auto;
 }
 
-h2.section-marker {
+.section-title {
   font-family: 'BN', Impact, Helvetica, Arial, sans-serif;
   color: #83161a;
-  background: #e9e9e9;
-  padding: 25px 0;
   font-size: 48px;
 }
 
+.section-marker {
+  background: #e9e9e9;
+  padding: 25px 0;
+}
 .section-home {
-  margin-top: 64px;
-  background: url('backdrop5.jpg') no-repeat;
+  /*margin-top: 64px;*/
+  background: url('../img/backdrop5.jpg') no-repeat;
   background-position: top center;
   height: 620px;
   width: 100%;
 }
 
 .section-home h1 {
+  margin-top: 0;
   color: white;
   font-size: 79px;
   font-family: 'BN', Impact, Helvetica, Arial, sans-serif;
@@ -125,10 +128,19 @@ h2.section-marker {
   padding: 25px 0;
 }
 
-.section-home div.tagline p {
+/*.section-home div.tagline p {
   width: 750px;
+}*/
+
+.profile-img-wrapper {
 }
 
+.profile-img {
+  display: inline-block;
+  overflow: hidden;
+  border-radius: 50%;
+  border: 10px solid #83161a;
+}
 p.announce {
   font-size: 24px;
   text-align: center;
@@ -329,4 +341,53 @@ a.big-link-btn:hover {
 
 .hide-xs {
   display: none;
+}
+.show-xs {
+  display: block;
+}
+
+.grey-xs {
+  color: #383838;
+}
+
+.red-xs {
+  color: #DA4453
+}
+
+.large-text-xs {
+  font-size: 32px;
+}
+
+.align-left-xs {
+  text-align: left;
+}
+.align-center-xs {
+  text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .hide-sm {
+    display: none;
+  }
+  .heading-small {
+    font-size: 20px;
+    border-bottom: 4px solid #DA4453;
+  }
+
+  .grey-sm {
+    color: #383838;
+    
+  }
+
+  .red-sm {
+    color: #DA4453;
+  }
+
+  .align-left-sm {
+    text-align: left;
+  }
+
+  .align-center-sm {
+    text-align: center;
+  }
 }
