--- a/wp-content/themes/sparkling/style.css
+++ b/wp-content/themes/sparkling/style.css
@@ -787,7 +787,7 @@ object {
   text-transform: uppercase;
 }
 .navbar.navbar-default {
-  background-color: #83161a;
+  background-color: #048384;
   font-family: 'Open Sans', serif;
   margin-bottom: 0;
   font-weight: 500;
@@ -1361,6 +1361,15 @@ button[type=submit],
 
 .main-logo img {
   padding: 10px 0;
+}
+
+.main-logo span {
+  color: white;
+  text-transform: uppercase;
+  font-size: 20px;
+  position: relative;
+  top: 3px;
+  left: 6px;
 }
 
 #logo .blog-home {
