--- a/assets/style.css
+++ b/assets/style.css
@@ -28,7 +28,7 @@
 }
 
 body {
-  color: #83161a;
+  color: #048384;
   background: white;
   font-family: 'F', Helvetica, Arial, sans-serif;
 }
@@ -51,7 +51,7 @@ a img {
 }
 
 header {
-  background: #83161a;
+  background: #048384;
   height: 74px;
   width: 100%;
   position: fixed;
@@ -75,7 +75,7 @@ header ul.main-nav {
 
 header ul.main-nav li {
   float: left;
-  color: #be1b21;
+  color: #FB9117;
   font-family: 'BN', Impact, Helvetica, Arial, sans-serif;
   font-size: 30px;
   margin-left: 5px;
@@ -96,7 +96,7 @@ header ul.main-nav li a.active {
 
 h2.section-marker {
   font-family: 'BN', Impact, Helvetica, Arial, sans-serif;
-  color: #83161a;
+  color: #048384;
   background: #e9e9e9;
   padding: 25px 0;
   font-size: 48px;
@@ -168,7 +168,7 @@ p.announce-big {
 .personel .dave .img-brace {
   height: 162px;
   width: 162px;
-  border: 10px #83161a solid;
+  border: 10px #048384 solid;
 }
 
 .img-brace {
@@ -200,7 +200,7 @@ p.announce-big {
   width: 37px;
   margin-right: 5px;
   border-radius: 50%;
-  border: 4px #83161a solid;
+  border: 4px #048384 solid;
 }
 
 .personel .resources ul li h4 {
@@ -246,13 +246,13 @@ p.announce-big {
 
 .services-array li .v-keyline {
   width: 3px;
-  background: #f0bfc1;
+  background: #FB9117;
   height: 50px;
   margin: 0 auto;
 }
 
 .services-array li .graphic {
-  border: 3px solid #f0bfc1;
+  border: 3px solid #56898a;
   border-radius: 50%;
   font-family: 'FontAwesome';
   font-size: 80px;
