--- a/wp-content/themes/sparkling/css/mediaqueries.css
+++ b/wp-content/themes/sparkling/css/mediaqueries.css
@@ -8,6 +8,10 @@
   .contain {
     width: 800px;
   }
+
+  #logo .blog-home, .main-logo span {
+    font-size: 30px;
+  }
 }
 
 @media (min-width: 420px) and (max-width: 799px) {
@@ -30,9 +34,9 @@
     height: 40px;
   }
 
-  /*header ul.main-nav li {
+  header ul.main-nav li {
     font-size: 16px;
-  }*/
+  }
 
   /*.section-home {
     margin-top: 50px;
@@ -233,18 +237,19 @@
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 899px) {
   .main-nav {
     /*list-style-type: none;*/
     float: right;
-    margin-top: 20px;
+    margin-top: 33px;
+    line-height: 1.2;
   }
 
   .main-nav li {
     float: left;
-    /*color: #be1b21;
+    /*color: #036e6f;
     font-family: 'BN', Impact, Helvetica, Arial, sans-serif;*/
-    font-size: 30px;
+    font-size: 18px;
     margin-left: 5px;
   }
 
